trigger/main/default/objects/Project__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>FD9 Testing</description>
    <label>Budget</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>