trigger/main/default/objects/Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>FD9 Testing</description>
    <label>Description</label>
    <length>35000</length>
    <type>LongTextArea</type>
</CustomField>